feat: add darkMode

--- a/css/style.css
+++ b/css/style.css
@@ -6,7 +6,7 @@
 body{
     margin: 0;
     padding: 0;   
-    background: #02000E!important;
+    background: #02000E;
     box-sizing: border-box;
 }
 
