--- a/css/style.css
+++ b/css/style.css
@@ -6,13 +6,21 @@
 body{
     margin: 0;
     padding: 0;   
-    background: #02000E;
     box-sizing: border-box;
 }
 
+.dark{
+    background-color: #02000E;
+    color: white;
+}
+
+.inpHidden{
+    visibility: hidden;
+}
 
 .hover:hover{
-    text-decoration: underline 1px #FFC107;
+    border-bottom:2px solid #FFC107;
+    cursor: pointer;
 }
 
 .contImg{
